--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.2.2",
+    "@astrojs/react": "^3.5.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
-    "astro": "^4.5.12"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.5.12",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
