--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.2.2",
+    "@astrojs/mdx": "^2.3.1",
     "@astrojs/react": "^3.5.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.5.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rehype-pretty-code": "^0.13.2"
   }
 }
