--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@astrojs/react": "^3.5.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.5.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rehype-pretty-code": "^0.13.2"
+    "rehype-pretty-code": "^0.13.2",
+    "tailwindcss": "^3.4.10"
   }
 }
